# jarvis

./: .gitignore  README.md  pyproject.toml
jarvis/: app.py  brain.py  llm.py  processor.py
jarvis/prompts/: __init__.py  base.py
jarvis/prompts/answer_questions/: __init__.py  system.md
jarvis/prompts/extract_insights/: __init__.py  system.md  user.md
tests/: extract_insights.py  processor_check.py  qna.py
